--- a/css/main.css
+++ b/css/main.css
@@ -200,7 +200,7 @@ blockquote p {color:#797979;}
 .footer a.email { background: url(../img/email.png) left top no-repeat; }
 .footer a.github { background: url(../img/github-alt.png) left top no-repeat; }
 .footer a.linkedin { background: url(../img/linkedin-alt.png) left top no-repeat; }
-.footer a.twitter { background: url(../img/twitter-alt.png) left top no-repeat; }
+.footer a.twitter { background: url(../img/bird.png) left top no-repeat; }
 
 .footer a:hover { background-position: left -34px; }
 
